# thesis-2024-Podliesnova

./: README.md
bci_sim/: CMakeLists.txt  package.xml
bci_sim/src/: bci_blinking.py  bci_errp.py  eval.py  move_on_line_random_stop.py
blink events/: blinking_dataset_pipeline.ipynb
blink_events/: blinking_own_data_detection.ipynb
errp_events/: errp.ipynb
models/: lstm_errp.pkl  rf_blinking.pkl
texture_ground_model/line/: model.config  model.sdf
texture_ground_model/line/materials/scripts/: line.material
